--- a/tree.html
+++ b/tree.html
@@ -73,7 +73,16 @@
                 $('#tree-parent').append($('<div/>', { id: window_id, 'class' : 'window'}))
                 $('#'+window_id).append($('<img/>', { id: window_id+"IMG", 'class' : 'window_leaf', 'src' : source}))
                 $('#'+window_id).append($('<div/>', { id: window_id+"IMG_close", 'class' : 'window_close'}))
-                $('#'+window_id).append($('<div/>', { id: window_id+"IMG_name", 'style' : 'font-size: 30px; top: 10px; left: 10px; color: black; position: absolute; border-radius: 5px; border: 2px solid #000000; background-color: white', 'html' : leaf[i]["LOCATION"]}))
+                $('#'+window_id).append($('<div/>', { id: window_id+"IMG_name", 'style' : 'font-size: 30px; top: 20px; left: 30px; color: black; position: absolute; border-radius: 5px; border: 2px solid #000000; background-color: white', 'html' : leaf[i]["LOCATION"]}))
+                $('#'+window_id).append($('<div/>', { id: window_id+"IMG_plot1", 'style' : 'height: 270px; width: 350px; top: 80px; left: 30px; color: black; position: absolute; border-radius: 5px; border: 2px solid #000000; background-color: rgba(146, 146, 146, 0.647)'}))
+                $('#'+window_id).append($('<div/>', { id: window_id+"IMG_plot2", 'style' : 'height: 270px; width: 350px; top: 80px; left: 420px; color: black; position: absolute; border-radius: 5px; border: 2px solid #000000; background-color: rgba(146, 146, 146, 0.647)'}))
+                $('#'+window_id).append($('<div/>', { id: window_id+"IMG_plot3", 'style' : 'height: 270px; width: 350px; top: 360px; left: 30px; color: black; position: absolute; border-radius: 5px; border: 2px solid #000000; background-color: rgba(146, 146, 146, 0.647)'}))
+                $('#'+window_id).append($('<div/>', { id: window_id+"IMG_plot4", 'style' : 'height: 270px; width: 350px; top: 360px; left: 420px; color: black; position: absolute; border-radius: 5px; border: 2px solid #000000; background-color: rgba(146, 146, 146, 0.647)'}))
+                $('#'+window_id).append($('<div/>', { id: window_id+"IMG_text", 'style' : 'padding: 10px; font-size: 15px; height: 120px; width: 740px; top: 650px; left: 30px; color: black; position: absolute; border-radius: 5px; border: 2px solid #000000; background-color: rgba(146, 146, 146, 0.647)', 'html': leaf[i]["info"]}))
+                $('#'+window_id+"IMG_plot1").append($('<img/>', { id: window_id+"IMG_plot1_img", 'class' : 'plot', 'src' : "./assets/plots/"+leaf[i]["plot1"]}))
+                $('#'+window_id+"IMG_plot2").append($('<img/>', { id: window_id+"IMG_plot2_img", 'class' : 'plot', 'src' : "./assets/plots/"+leaf[i]["plot2"]}))
+                $('#'+window_id+"IMG_plot3").append($('<img/>', { id: window_id+"IMG_plot3_img", 'class' : 'plot', 'src' : "./assets/plots/"+leaf[i]["plot3"]}))
+                $('#'+window_id+"IMG_plot4").append($('<img/>', { id: window_id+"IMG_plot4_img", 'class' : 'plot', 'src' : "./assets/plots/"+leaf[i]["plot4"]}))
                 console.log(window_id)
                 $("#"+leaf[i]["Code"]).on('click', function() {
                   console.log(window_id)
@@ -100,45 +109,6 @@
                 console.log(leaf[i]);
             }
         </script>
-    </div>
-        <p>Select a filter:</p>
-    <div>
-        <input type="radio" name="size" value="GDP" id="GDP">
-        <label for="GDP">GDP</label>
-    </div>
-    <div>
-        <input type="radio" name="size" value="GDP/capita" id="GDP/capita">
-        <label for="GDP/capita">GDP/capita</label>
-    </div>
-    <div>
-        <input type="radio" name="size" value="Population" id="Population">
-        <label for="Population">Population</label>
-    </div>
-    <div>
-        <input type="radio" name="size" value="Poverty" id="Poverty">
-        <label for="Poverty">Poverty</label>
-    </div>
-    <p>
-        <button id="btn">Show Selected Value</button>
-    </p>
-
-    <p id="output"></p>
-        <script>
-            const btn = document.querySelector('#btn');        
-            const radioButtons = document.querySelectorAll('input[name="size"]');
-            btn.addEventListener("click", () => {
-                let selectedSize;
-                for (const radioButton of radioButtons) {
-                    if (radioButton.checked) {
-                        selectedSize = radioButton.value;
-                        break;
-                    }
-                }
-                // show the output:
-                output.innerText = selectedSize ? `You selected ${selectedSize}` : `You haven't selected any size`;
-            });
-        </script>
-    </div>
 </div>
     </section>
 </html>
