added gdp graph

--- a/tree.html
+++ b/tree.html
@@ -79,7 +79,7 @@
                 $('#'+window_id+"IMG_plot1").append($('<img/>', { id: window_id+"IMG_plot1_img", 'class' : 'plot', 'src' : "./assets/plots/Crude_Prod/"+leaf[i]["Code"]+"_crude.png"}))
                 $('#'+window_id+"IMG_plot2").append($('<img/>', { id: window_id+"IMG_plot2_img", 'class' : 'plot', 'src' : "./assets/plots/Fossil_Use/"+leaf[i]["Code"]+"_fossil_use.png"}))
                 $('#'+window_id+"IMG_plot3").append($('<img/>', { id: window_id+"IMG_plot3_img", 'class' : 'plot', 'src' : "./assets/plots/Green_Energy/"+leaf[i]["Code"]+"_green_nrg.png"}))
-                $('#'+window_id+"IMG_plot4").append($('<img/>', { id: window_id+"IMG_plot4_img", 'class' : 'plot', 'src' : "./assets/plots/GDP_Cap/"+leaf[i]["Code"]+""}))
+                $('#'+window_id+"IMG_plot4").append($('<img/>', { id: window_id+"IMG_plot4_img", 'class' : 'plot', 'src' : "./assets/plots/GDP_per_Cap/"+leaf[i]["Code"]+"_gdp_cap.png"}))
                 console.log(window_id)
                 $("#"+leaf[i]["Code"]).on('click', function() {
                   console.log(window_id)
