changed energy graph

--- a/tree.html
+++ b/tree.html
@@ -77,7 +77,7 @@
                 $('#'+window_id).append($('<div/>', { id: window_id+"IMG_plot4", 'style' : 'height: 390px; width: 560px; top: 500px; left: 600px; color: black; position: absolute; border-radius: 5px; border: 2px solid #000000; background-color: rgba(146, 146, 146, 0.647)'}))
                 $('#'+window_id).append($('<div/>', { id: window_id+"IMG_text", 'style' : 'padding: 10px; font-size: 15px; height: 80px; width: 1130px; top: 900px; left: 30px; color: black; position: absolute; border-radius: 5px; border: 2px solid #000000; background-color: rgba(146, 146, 146, 0.647)', 'html': leaf[i]["info"]}))
                 $('#'+window_id+"IMG_plot1").append($('<img/>', { id: window_id+"IMG_plot1_img", 'class' : 'plot', 'src' : "./assets/plots/Crude_Prod/"+leaf[i]["Code"]+"_crude.png"}))
-                $('#'+window_id+"IMG_plot2").append($('<img/>', { id: window_id+"IMG_plot2_img", 'class' : 'plot', 'src' : "./assets/plots/Fossil_Use/"+leaf[i]["Code"]+"_fossil_use.png"}))
+                $('#'+window_id+"IMG_plot2").append($('<img/>', { id: window_id+"IMG_plot2_img", 'class' : 'plot', 'src' : "./assets/plots/Energy_supply/"+leaf[i]["Code"]+"_energy_supply.png"}))
                 $('#'+window_id+"IMG_plot3").append($('<img/>', { id: window_id+"IMG_plot3_img", 'class' : 'plot', 'src' : "./assets/plots/Green_Energy/"+leaf[i]["Code"]+"_green_nrg.png"}))
                 $('#'+window_id+"IMG_plot4").append($('<img/>', { id: window_id+"IMG_plot4_img", 'class' : 'plot', 'src' : "./assets/plots/GDP_per_Cap/"+leaf[i]["Code"]+"_gdp_cap.png"}))
                 console.log(window_id)
