added country specific info

--- a/overview.html
+++ b/overview.html
@@ -15,7 +15,7 @@
     <nav class="py-3 navbar navbar-expand-lg fixed-top auto-hiding-navbar">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img class="logo" src="./assets/leaf.png" /> Group 22
+        <img class="logo" src="./assets/leaf.png" /> Prefer Green
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -46,8 +46,8 @@
         <img style="top: 0px;left: 0;" class="tree" src="./assets/graph_vis.png" />
         <div style="font-size: 50px; color:black; position: absolute; top: 20px;left: 0; padding: 20px"> Mother Earth:</div>
         <div style="font-size: 25px; color:black; position: absolute; top: 80px;left: 0; padding: 20px;"> Nations' Green Energy Preference vs Some Other Metrics</div>
-        <div style="font-size: 20px; color:black; position: absolute; top: 880px;left: 0; padding: 20px"> Title </div>
-        <div style="font-size: 15px; color:black; position: absolute; top: 910px;left: 0; padding: 20px;"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </div>
+        <div style="font-size: 25px; color:black; position: absolute; top: 880px;left: 0; padding: 20px"> Overview of Countries Green Energy Preference vs. Their Economic Performence </div>
+        <div style="font-size: 20px; color:black; position: absolute; top: 920px;left: 0; padding: 20px;"> This is a plot of over 100 countries showing a general trend on green energy preference vs. GDP per capita. At first look, it is quite obvious that there seems to be a negative relationship, it even looks like an exponential decay. Looks like heavily industrialized rich countries mostly rely on fossil fuel for generating more wealth. </div>
     </div>
   </body>
 </html>
