--- a/sources.html
+++ b/sources.html
@@ -15,7 +15,7 @@
     <nav class="py-3 navbar navbar-expand-lg fixed-top auto-hiding-navbar">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img class="logo" src="./assets/leaf.png" /> Group 22
+        <img class="logo" src="./assets/leaf.png" /> Prefer Green
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -40,14 +40,15 @@
   </nav>
   <!-- End Navbar -->
   <section class="tree-section">
-    <div class="tree-div">
-    <div>
-        <div style="font-size: 30px; color:black; position: absolute; top: 100px; left: 0; padding: 20px;"> Sources </div>
-        <div style="font-size: 20px; color:black; position: absolute; top: 150px; left: 0; padding: 20px;"> CIA. “Real GDP Per Capita.” The World Factbook. Accessed: 13 December, 2022. https://www.cia.gov/the-world-factbook/field/real-gdp-per-capita/. </div>
-        <div style="font-size: 20px; color:black; position: absolute; top: 180px; left: 0; padding: 20px;"> OECD. “Primary energy supply.” Accessed: 13 December, 2022. https://data.oecd.org/energy/primary-energy-supply.htm. </div>
-        <div style="font-size: 20px; color:black; position: absolute; top: 210px; left: 0; padding: 20px;"> OECD. “Crude oil production.” Accessed: 13 December, 2022. https://data.oecd.org/energy/crude-oil-production.htm. </div>
-        <div style="font-size: 20px; color:black; position: absolute; top: 240px; left: 0; padding: 20px;"> OECD. “Renewable energy.” Accessed: 13 December, 2022. https://data.oecd.org/energy/renewable-energy.htm. </div>
-        <div style="font-size: 20px; color:black; position: absolute; top: 270px; left: 0; padding: 20px;"> The World Bank. "GDP per capita (constant 2015 US$)." Accessed: 15 December, 2022. https://data.worldbank.org/indicator/NY.GDP.PCAP.KD. </div>
+    <div class="tree-div" style="background-color: rgb(186, 217, 137); height: 1000px">
+        <div style="font-size: 30px; color:black; position: absolute; top: 100px; padding: 20px;"> Sources </div>
+      <ul class="list-group" style="position: absolute; top: 180px; max-width: 1000px; padding:20px">
+        <li class="list-group-item">CIA. “Real GDP Per Capita.” The World Factbook. Accessed: 13 December, 2022. https://www.cia.gov/the-world-factbook/field/real-gdp-per-capita/.</li>
+        <li class="list-group-item">OECD. “Primary energy supply.” Accessed: 13 December, 2022. https://data.oecd.org/energy/primary-energy-supply.htm.</li>
+        <li class="list-group-item">OECD. “Crude oil production.” Accessed: 13 December, 2022. https://data.oecd.org/energy/crude-oil-production.htm.</li>
+        <li class="list-group-item">OECD. “Renewable energy.” Accessed: 13 December, 2022. https://data.oecd.org/energy/renewable-energy.htm.</li>
+        <li class="list-group-item">The World Bank. "GDP per capita (constant 2015 US$)." Accessed: 15 December, 2022. https://data.worldbank.org/indicator/NY.GDP.PCAP.KD.</li>
+      </ul>
       </div>
   </body>
 </html>
