--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <nav class="py-3 navbar navbar-expand-lg fixed-top auto-hiding-navbar">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img class="logo" src="./assets/leaf.png" /> Group 22
+        <img class="logo" src="./assets/leaf.png" /> Prefer Green
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
