added link to get repo on main page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="py-3 navbar navbar-expand-lg fixed-top auto-hiding-navbar">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img class="logo" src="./assets/leaf.png" /> Group 22
+        <img class="logo" src="./assets/leaf.png" /> Prefer Green
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -74,6 +74,18 @@
             </a>
               <h5 class="card-title">Demo</h5>
               <p class="card-text">A visual to represent green energy usage of countries, click on leaves to get some comprehensive country specific information</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 d-flex justify-content-center">
+          <div class="card" style="width: 27rem;">
+            <div class="card-body">
+              <a class="nav-link active" aria-current="page" href="https://github.com/aydinkaancinar/prefergreen">
+              <img src="./assets/github.jpeg" class="icon-new" alt="Service Two"/>
+            </a>
+              <h5 class="card-title">Code</h5>
+              <p class="card-text">Check our GitHub repo for the code for the website and the graphs!</p>
             </div>
           </div>
         </div>
